--- a/conf/custom_datasets/multifield_qa_custom.yaml
+++ b/conf/custom_datasets/multifield_qa_custom.yaml
@@ -1,6 +1,6 @@
 version_2_with_negative: False
 test:
-    _target_: "generative_modeling.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
+    _target_: "context_compression.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
     split: "test"
     data_config:
         prompt: "Answer the following question based on the above text, only give me the answer and do not output any other words."
