--- a/conf/custom_datasets/passage_retrieval.yaml
+++ b/conf/custom_datasets/passage_retrieval.yaml
@@ -1,6 +1,6 @@
 version_2_with_negative: False
 test:
-    _target_: "generative_modeling.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
+    _target_: "context_compression.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
     split: "test"
     data_config:
         prompt: "You are given 30 paragraphs from Wikipedia. Please determine which paragraph the abstract in the question field is from. Please enter the number of the paragraph that the abstract is from. The answer format must be like \"Paragraph 1\", \"Paragraph 2\", etc."
