--- a/conf/custom_datasets/qasper_qa_custom.yaml
+++ b/conf/custom_datasets/qasper_qa_custom.yaml
@@ -1,6 +1,6 @@
 version_2_with_negative: False
 test:
-    _target_: "generative_modeling.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
+    _target_: "context_compression.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
     split: "test"
     data_config:
         prompt: "You are given a scientific article and a question. Answer the question as concisely as you can, using a single phrase or sentence if possible. If the question cannot be answered based on the information in the article, write \"unanswerable\". If the question is a yes/no question, answer \"yes\", \"no\", or \"unanswerable\". Do not provide any explanation."
