--- a/conf/custom_datasets/qmsum_custom.yaml
+++ b/conf/custom_datasets/qmsum_custom.yaml
@@ -1,6 +1,6 @@
 version_2_with_negative: False
 test:
-    _target_: "generative_modeling.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
+    _target_: "context_compression.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
     split: "test"
     data_config:
         prompt: "You are given a meeting transcript and a query containing a question or instruction. Answer the query in one or more sentences."
