--- a/conf/custom_datasets/sam_sum_custom.yaml
+++ b/conf/custom_datasets/sam_sum_custom.yaml
@@ -1,6 +1,6 @@
 version_2_with_negative: False
 test:
-    _target_: "generative_modeling.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
+    _target_: "context_compression.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
     split: "test"
     data_config:
         prompt: "You are given some examples. Summarize the dialogue into a few short sentences."
