--- a/conf/custom_datasets/trec_custom.yaml
+++ b/conf/custom_datasets/trec_custom.yaml
@@ -1,6 +1,6 @@
 version_2_with_negative: False
 test:
-    _target_: "generative_modeling.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
+    _target_: "context_compression.custom_datasets.llama_dataset_squad_custom.LlamaDatasetCustom"
     split: "test"
     data_config:
         prompt: "Given some examples of questions. Please determine the type of the question below."
