--- a/conf/models/quantized_causal_compress_llmlingua_model.yaml
+++ b/conf/models/quantized_causal_compress_llmlingua_model.yaml
@@ -1,4 +1,4 @@
-_target_: "generative_modeling.models.modeling_llmlingua.LlamaForCompressedCausalLMLingua.from_pretrained"
+_target_: "context_compression.models.modeling_llmlingua.LlamaForCompressedCausalLMLingua.from_pretrained"
 pretrained_model_name_or_path: None
 config:
   _target_: "transformers.AutoConfig.from_pretrained"
