--- a/conf/predictors/qa_lm_predictor.yaml
+++ b/conf/predictors/qa_lm_predictor.yaml
@@ -1,4 +1,4 @@
-_target_: "generative_modeling.predictors.language_modeling_predictor.LanguageModelingQAPredictor"
+_target_: "context_compression.predictors.language_modeling_predictor.LanguageModelingQAPredictor"
 predictor_config:
     metric_name: "squad_v2"
     max_answer_length: ${custom_datasets.test.data_config.max_answer_length}
