--- a/conf/accelerate/multi_gpu.yaml
+++ b/conf/accelerate/multi_gpu.yaml
@@ -1,13 +1,14 @@
-compute_environment: LOCAL_MACHINE
+compute_environment: LOCAL_MACHINE                                                                         
 debug: false
-distributed_type: 'NO'
+distributed_type: MULTI_GPU
 downcast_bf16: 'no'
-gpu_ids: '0' # change gpu id here
+enable_cpu_affinity: false
+gpu_ids: all
 machine_rank: 0
 main_training_function: main
 mixed_precision: 'no'
 num_machines: 1
-num_processes: 1
+num_processes: 2
 rdzv_backend: static
 same_network: true
 tpu_env: []
