--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = context-compression
 description = A new awesome project.
-url = https://github.com/giulio98/context-compression
+url = https://github.com/anonymous/context-compression
 long_description = file: README.md
-author = Giulio Corallo
-author_email = corallo.giulio@yahoo.it
+author = anonymous
+author_email = anonymous
 keywords = python
 license = MIT Licence
 
