--- a/conf/experiments_longbench_qasper/evaluate_llama_compress_zeroshot_qa_qasper.yaml
+++ b/conf/experiments_longbench_qasper/evaluate_llama_compress_zeroshot_qa_qasper.yaml
@@ -14,6 +14,7 @@ models:
   target_token: 512
   condition: "question"
   normalize: True
+  is_full: False
   distance_metric: None
   config:
     pretrained_model_name_or_path: "meta-llama/Llama-2-7b-chat-hf"
