--- a/conf/experiments_longbench_qasper/evaluate_mistral_compress_zeroshot_qa_qasper.yaml
+++ b/conf/experiments_longbench_qasper/evaluate_mistral_compress_zeroshot_qa_qasper.yaml
@@ -15,6 +15,7 @@ models:
   target_token: 512
   condition: "question"
   normalize: True
+  is_full: False
   distance_metric: None
   config:
     pretrained_model_name_or_path: "mistralai/Mistral-7B-Instruct-v0.2"
