--- a/conf/experiments_squad_2/evaluate_llama_compress_zeroshot_qa_squad.yaml
+++ b/conf/experiments_squad_2/evaluate_llama_compress_zeroshot_qa_squad.yaml
@@ -13,6 +13,7 @@ models:
   target_token: 256
   condition: "question"
   normalize: True
+  is_full: False
   distance_metric: None
   config:
     pretrained_model_name_or_path: "meta-llama/Llama-2-7b-chat-hf"
